<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDisplay"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/for_button" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:inputType="textPersonName"
            android:hint="@string/enter_something"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show">
        </TextView>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonGenderMale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/male_button">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioButtonGenderFemale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/female_button">

        </RadioButton>

    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButtonEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="ToggleButton"
        android:textOff="disabled"
        android:textOn="enabled" />
</LinearLayout>